# TDigitizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  parameters.json
include/: DigiPar.hpp  ParConverter.cpp  TDigitizer.hpp  TPHA.hpp  TPSD.hpp  TParHandler.hpp  TWaveform.hpp  memo
src/: TDigitizer.cpp  TPHA.cpp  TPSD.cpp  TParHandler.cpp  TWaveform.cpp
